# mambo

./: Cargo.toml  Dockerfile
msg/: Cargo.toml  build.rs
msg/mavros/msg/: GPSINPUT.msg  RCOut.msg  State.msg
msg/mavros/srv/: SetMode.srv
msg/src/: lib.rs
sim_control_bridge/: Cargo.toml
sim_control_bridge/src/: main.rs
sim_data_bridge/: Cargo.toml
sim_data_bridge/src/: main.rs
src/: main.rs
